objects/Billing_Log__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Item_End_Date__c</fullName>
        <formula>Billing_Item__r.End_Date__c</formula>
        <inlineHelpText>this is the end date that billing will stop processing in the ATG RMB Billing System</inlineHelpText>
        <label>Billing Item End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Item__c</fullName>
        <label>Billing Item</label>
        <referenceTo>Billing_Item__c</referenceTo>
        <relationshipLabel>Billing Logs</relationshipLabel>
        <relationshipName>Billing_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Log_Action__c</fullName>
        <label>Log Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Status__c</fullName>
        <label>Log Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>debugResponse__c</fullName>
        <label>debugResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Billing Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_Item__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Log_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mark_Temp</fullName>
        <columns>NAME</columns>
        <columns>Billing_Item__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Billing_Item_End_Date__c</columns>
        <columns>Log_Action__c</columns>
        <columns>Log_Date__c</columns>
        <columns>Log_Message__c</columns>
        <columns>Log_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Mark Temp</label>
    </listViews>
    <listViews>
        <fullName>Todays_Error</fullName>
        <columns>NAME</columns>
        <columns>Log_Status__c</columns>
        <columns>Log_Date__c</columns>
        <columns>Log_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Log_Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Todays Error</label>
    </listViews>
    <listViews>
        <fullName>Todays_Success</fullName>
        <columns>NAME</columns>
        <columns>Log_Status__c</columns>
        <columns>Log_Date__c</columns>
        <columns>Log_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Log_Status__c</field>
            <operation>notEqual</operation>
            <value>Error</value>
        </filters>
        <label>Todays Success</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{YYYY}{MM}-{0}</displayFormat>
        <label>Billing Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>